# qr_ingress

./: .gitignore  README.md  build.sh  build_reader.sh  dockerfile  dockerfile-client  dockerfile-qr-apache
kubernetes/: 01_configmaps.yaml  03_services.yaml  04_deployments.yaml  install.sh  port-forward.sh
kubernetes/qr_client/: 00_namespaces.yaml  01_configmaps.yaml  03_services.yaml  04_deployments.yaml
kubernetes/qr_server/: 00_namespaces.yaml  01_configmaps.yaml  03_services.yaml
libs/: requirements.txt
libs/qr_common/: setup.cfg
libs/qr_common/src/qr/: exceptions.py  qr.py
libs/qr_common/src/qr_common/: exceptions.py  qr.py
qr/: db.sqlite3_moodle  requirements.txt
qr/qr/: asgi.py  settings.py  urls.py  wsgi.py
qr/quiz/: admin.py  models.py  urls.py  views.py
qr/quiz/migrations/: 0001_initial.py  0002_auto_20210927_2307.py  0002_auto_20211001_1042.py  0002_quizgrade_user.py  0003_auto_20210927_2342.py  0003_auto_20211022_1507.py
qr/quiz/static/: error_oauth.css  invalid_quiz.css  qr_code.css
qr/quiz/templates/: error_oauth.html  invalid_quiz.html  invalid_user.html  qr_code.html  quiz_index.tmpl
qr_client/: manage.py  requirements.txt
qr_client/qr_client/: asgi.py  settings.py  urls.py  wsgi.py
qr_client/reader/: models.py  urls.py  views.py
qr_client/reader/templates/: authorized.html  denied.html  invalid.html  reader.html  (+1 more)
utils/: generate_qr.py  generate_qr_images.py  qr_url.py  read_qr_string.py  reader_example.py  start-full-screen.sh  tts.py
utils/client-pc/: ejecutar.sh
utils/qr_common/: qr.py
utils/tmp/: test.html
(+7 files in other folders)
