[metadata]
name = qr_common
version = 0.0.1
author = Pablo Daniel Rey
author_email = pablodanielrey@gmail.com
description = Ejemplo de estructuras reutilizables para manejar la generación de qr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pablodanielrey/qr_ingress
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src